- removed unused comments - updated front-end so that the text box dynamically changes size depending on how much content is in the box

--- a/public/page.html
+++ b/public/page.html
@@ -9,13 +9,13 @@
 <body>
   <div class="container">
     <form id="pageForm" class="form-box">
-      <div class="box">
+       <div class="box">
         <p>Plain text</p>
-        <input textarea name="role" placeholder="Resume" required></textarea>
+        <textarea name="role" placeholder="Resume" required></textarea>
       </div>
       <div class="box">
         <p>Plain text</p>
-        <input textarea id="content" name="content" placeholder="Interests"></textarea>
+        <textarea id="content" name="content" placeholder="Interests"></textarea>
       </div>
       <div class="button-container">
         <button type="submit" name="submit_form">Submit</button>
