- changed the parameters for chatGPT API from {role, resume, content} to {role, content} - merged role and resume as 1 string with prompt - updated script.js

--- a/public/page.html
+++ b/public/page.html
@@ -10,12 +10,12 @@
   <div class="container">
     <form id="pageForm" class="form-box">
        <div class="box">
-        <p>Plain text</p>
-        <textarea name="role" placeholder="Resume" required></textarea>
+        <p>Enter your Resume</p>
+        <textarea id="resumeTextArea" name="resumeTextArea" placeholder="Resume" required></textarea>
       </div>
       <div class="box">
-        <p>Plain text</p>
-        <textarea id="content" name="content" placeholder="Interests"></textarea>
+        <p>Enter some things you would be interested in working on</p>
+        <textarea id="interestsTextArea" name="interestsTextArea" placeholder="Interests"></textarea>
       </div>
       <div class="button-container">
         <button type="submit" name="submit_form">Submit</button>
